--- a/src/main/webapp/forms/review.html
+++ b/src/main/webapp/forms/review.html
@@ -1,6 +1,6 @@
            <form role="form" name="form">
                <div class="form-group">
-                   <label for="FormField_Color-field">Your Favorite Color</label>
+                   <label>Your Favorite Color</label>
                    <!--<input   required-->
                           <!--cam-variable-name="FormField_Color"-->
                           <!--cam-variable-type="String"-->
@@ -15,17 +15,17 @@
 
                </div>
                <div class="form-group">
-                   <label for="FormField_myReason-field">My Reason</label>
+                   <label>My Reason</label>
                    <input cam-variable-name="FormField_myReason"
-                          cam-variable-type="string"
+                          cam-variable-type="String"
                           class="form-control"
                           readonly="true"
                    />
                </div>
                <div class="form-group">
-                   <label for="comment-field">My Reason</label>
+                   <label>My Reason</label>
                    <textarea cam-variable-name="comment"
-                             cam-variable-type="string"
+                             cam-variable-type="String"
                              class="form-control"
                              rows="4">
                    </textarea>
