--- a/src/main/webapp/forms/start.html
+++ b/src/main/webapp/forms/start.html
@@ -1,15 +1,13 @@
            <form role="form" name="form">
                <div class="form-group">
-                   <label for="FormField_Color-field">Your Favorite Color</label>
+                   <label >Your Favorite Color</label> <!--for="FormField_Color-field"-->
                    <!--<input   required-->
                           <!--cam-variable-name="FormField_Color"-->
                           <!--cam-variable-type="String"-->
                           <!--class="form-control" />-->
                    <select required
-                       class="form-control"
-                       name="FormField_Color"
-                       cam-variable-name="FormField_Color"
-                       cam-variable-type="String">
+                           cam-variable-name="FormField_Color"
+                           cam-variable-type="String">
                        <option value="Blue" checked>Blue</option>
                        <option value="Green">Green</option>
                        <option value="Red">Red</option>
@@ -19,9 +17,9 @@
 
                </div>
                <div class="form-group">
-                   <label for="FormField_myReason-field">My Reason</label>
+                   <label >My Reason</label>
                    <textarea cam-variable-name="FormField_myReason"
-                             cam-variable-type="string"
+                             cam-variable-type="String"
                              class="form-control"
                              rows="4">
                    </textarea>
