--- a/src/main/webapp/forms/review.html
+++ b/src/main/webapp/forms/review.html
@@ -23,7 +23,7 @@
                    />
                </div>
                <div class="form-group">
-                   <label>My Reason</label>
+                   <label>My Response</label>
                    <textarea cam-variable-name="comment"
                              cam-variable-type="String"
                              class="form-control"
