--- a/src/main/webapp/forms/review.html
+++ b/src/main/webapp/forms/review.html
@@ -23,11 +23,21 @@
                    />
                </div>
                <div class="form-group">
+                   <label>The car added by the Script task using Groovy</label>
+                   <input required
+                          class="form-control"
+                          name="car"
+                          cam-variable-name="car"
+                          cam-variable-type="String"
+                          readonly="true"
+                   />
+
+               </div>
+               <div class="form-group">
                    <label>My Response</label>
                    <textarea cam-variable-name="comment"
                              cam-variable-type="String"
                              class="form-control"
-                             rows="4">
-                   </textarea>
+                             rows="4"></textarea>
                </div>
            </form>
