--- a/src/main/webapp/forms/start.html
+++ b/src/main/webapp/forms/start.html
@@ -1,10 +1,6 @@
            <form role="form" name="form">
                <div class="form-group">
-                   <label >Your Favorite Color</label> <!--for="FormField_Color-field"-->
-                   <!--<input   required-->
-                          <!--cam-variable-name="FormField_Color"-->
-                          <!--cam-variable-type="String"-->
-                          <!--class="form-control" />-->
+                   <label >Your Favorite Color</label>
                    <select required
                            cam-variable-name="FormField_Color"
                            cam-variable-type="String">
@@ -18,10 +14,6 @@
                </div>
                <div class="form-group">
                    <label >My Reason</label>
-                   <textarea cam-variable-name="FormField_myReason"
-                             cam-variable-type="String"
-                             class="form-control"
-                             rows="4">
-                   </textarea>
+                   <textarea cam-variable-name="FormField_myReason" cam-variable-type="String" class="form-control" rows="4"></textarea>
                </div>
            </form>
